// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Code component resized 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
  font-size: 2.875rem;
  line-height: 4rem;
}

.c0 {
  text-transform: none;
}

<code
  className="c0 c1"
>
  Hello
</code>
`;

exports[`A Code component text transformed 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

.c0 {
  text-transform: uppercase;
}

<code
  className="c0 c1"
>
  Hello
</code>
`;

exports[`A Code component with variant 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

.c0 {
  text-transform: none;
  color: #CC1F36;
}

<code
  className="c0 c1"
>
  Hello
</code>
`;

exports[`A Code component wrapped 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

.c0 {
  text-transform: none;
  overflow-wrap: break-word;
}

<code
  className="c0 c1"
>
  Hello
</code>
`;

exports[`A Codet component weight 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
  font-weight: 700;
}

.c0 {
  text-transform: none;
}

<code
  className="c0 c1"
>
  Hello
</code>
`;

exports[`A Text component decorated 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

.c0 {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  text-transform: none;
}

<code
  className="c0 c1"
>
  Hello
</code>
`;

exports[`A default Code component 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

.c0 {
  text-transform: none;
}

<code
  className="c0 c1"
>
  Hello
</code>
`;
